마크업에 디자인 산출물 적용

--- a/src/markup.html
+++ b/src/markup.html
@@ -14,10 +14,9 @@
                 <li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li>
             </ul>
         </div>
-        <div class="bp_pointer"></div>
     </div>
-    <div class="bp_description_panel">
-        <div class="bp_target_panel_area">
+    <div class="bp_descriptor">
+        <div class="bp_target_panel">
             <h2 class="bp_target_code">Target Code Segment</h2>
             <div class="bp_segment">
                     <img src="img/codes/3.png">
@@ -25,12 +24,13 @@
             <h2 class="bp_firewall_removed">Firewalls removed, full access granted</h2>
             <h2 class="bp_access_denied">Access Denied</h2>
         </div>
-        <div class="bp_status_panel_area">
+        <div class="bp_status_panel">
             <div class="bp_start_area">
                 <button class="bp_button">Start Hack</button>
             </div>
             <h3 class="bp_remaining_code">Remaining Code</h3>
-            <div>
+            <h3 class="bp_code_hack_completed">Code Hack Completed</h3>
+            <div class="bp_found_codes">
                 <div>
                     <div class="bp_cover"></div>
                     <div class="img_container"><img src="img/codes/10.png"></div>
@@ -44,54 +44,14 @@
                     <div class="img_container"></div>
                 </div>
             </div>
-        </div>
-    </div>
-    <div class="bp_descriptor">
-        <div class="bp_target_panel">
-            <h2 class="bp_target_code">Target Code Segment</h2>
 
-            <div class="bp_segment">
-                <div>
-                    <img src="img/codes/3.png">
-                </div>
-            </div>
-
-            <h2 class="bp_firewall_removed">Firewalls removed, full access granted</h2>
-            <h2 class="bp_access_denied">Access Denied</h2>
-        </div>
-
-        <div class="bp_status_panel">
-            <div class="bp_start_area">
-                <button class="bp_button">Start</button>
-            </div>
-            <dl>
-                <dt>
-                    Remaining Code
-                </dt>
-                <dd>
-                    <div>
-                        <div class="bp_cover"></div>
-                        <div class="img_container"><img src="img/codes/10.png"></div>
-                    </div>
-                    <div>
-                        <div class="bp_cover"></div>
-                        <div class="img_container"></div>
-                    </div>
-                    <div>
-                        <div class="bp_cover"></div>
-                        <div class="img_container"></div>
-                    </div>
-                </dd>
-            </dl>
         </div>
     </div>
     <div class="bp_slider">
         <ul>
             <li><div class="bp_card_outline">
                 <div class="bp_cursor">
-                    <img class="bp_left" src="img/cursor_left.png">
-                    <img class="bp_arrow" src="img/cursor_arrow.png">
-                    <img class="bp_right" src="img/cursor_right.png">
+                    <img src="img/cursor.png">
                 </div>
                 <div class="bp_card bp_selected">
                     <div class="bp_card_cover"></div><img src="img/codes/1.png">
@@ -164,8 +124,8 @@
         </ul>
     </div>
     <div class="bp_footer">
-        <div class="bp_remaining_attempts"><span class="bp_number bp_3">3</span><span class="bp_background">attempt(s) remaining</span></div>
-        <div class="bp_exit"><a href="#">exit</a></div>
+        <div class="bp_remaining_attempts"><span class="bp_number bp_3">3</span><span class="bp_msg_attempts_remaining">attempt(s) remaining</span></div>
+        <div class="bp_exit"><button class="bp_button">Exit</button></div>
     </div>
 </div>
 </body>
