--- a/src/js/bui/descriptor/statusPanelViewTemplate.html
+++ b/src/js/bui/descriptor/statusPanelViewTemplate.html
@@ -1,22 +1,19 @@
 <div class="bp_start_area">
     <button class="bp_button">Start Hack</button>
 </div>
-<dl>
-    <dt>
-        Remaining Code
-    </dt>
-    <dd>
-        <div>
-            <div class="bp_cover"></div>
-            <div class="img_container"><img src="img/codes/10.png"></div>
-        </div>
-        <div>
-            <div class="bp_cover"></div>
-            <div class="img_container"></div>
-        </div>
-        <div>
-            <div class="bp_cover"></div>
-            <div class="img_container"></div>
-        </div>
-    </dd>
-</dl>
+<h3 class="bp_remaining_code">Remaining Code</h3>
+<h3 class="bp_code_hack_completed">Code Hack Completed</h3>
+<div class="bp_found_codes">
+    <div>
+        <div class="bp_cover"></div>
+        <div class="img_container"></div>
+    </div>
+    <div>
+        <div class="bp_cover"></div>
+        <div class="img_container"></div>
+    </div>
+    <div>
+        <div class="bp_cover"></div>
+        <div class="img_container"></div>
+    </div>
+</div>
