ui 테스트 안나오는 수준의 오류 수정

--- a/src/uitest.html
+++ b/src/uitest.html
@@ -19,6 +19,7 @@
 
     var testFiles = ["testCard",
         "testCursor",
+        "testStartStage",
         "testDescriptor",
         "testFooter",
         "testHeader",
