targetPanelView glowTitle 처리 잘못 선택 시 shake 처리

--- a/src/uitest.html
+++ b/src/uitest.html
@@ -22,7 +22,8 @@
         "testSlider",
         "testStatusPanel",
         "testStatusPanelViewing",
-        "testTargetPanel"
+        "testTargetPanel",
+        "testTargetPanelShowFirewallRemoved"
     ];
     var requireLibs = ['jquery', 'underscore', 'jquery-ui'];
     if (location.search.indexOf("uitest") >= 0) {
