--- a/output/bypass/hacking/index.html
+++ b/output/bypass/hacking/index.html
@@ -11,7 +11,7 @@
 <script type="text/javascript" src="js/lib/require.js"></script>
 <script type="text/javascript" src="js/config.js"></script>
 <script type="text/javascript">
-    require(["app/base"]);
+    require(["app/start"]);
 </script>
 </body>
 </html>
