--- a/src/markup.html
+++ b/src/markup.html
@@ -54,70 +54,85 @@
                     <img src="img/cursor.png">
                 </div>
                 <div class="bp_card bp_selected">
+                    <div class="bp_unauth_cover"></div>
                     <div class="bp_card_cover"></div><img src="img/codes/1.png">
                 </div>
             </div><div class="bp_card_outline">
                 <div class="bp_card">
+                    <div class="bp_unauth_cover"></div>
                     <div class="bp_card_cover"></div><img src="img/codes/1.png">
                 </div>
             </div><div class="bp_card_outline">
                 <div class="bp_card">
+                    <div class="bp_unauth_cover"></div>
                     <div class="bp_card_cover"></div><img src="img/codes/1.png">
                 </div>
             </div></li>
             <li><div class="bp_card_outline">
                 <div class="bp_card bp_districted">
+                    <div class="bp_unauth_cover"></div>
                     <div class="bp_card_cover"></div><img src="img/codes/1.png">
                 </div>
             </div><div class="bp_card_outline">
                 <div class="bp_card ">
+                    <div class="bp_unauth_cover"></div>
                     <div class="bp_card_cover"></div><img src="img/codes/3.png">
                 </div>
             </div><div class="bp_card_outline">
 
                 <div class="bp_card">
+                    <div class="bp_unauth_cover"></div>
                     <div class="bp_card_cover"></div><img src="img/codes/1.svg">
                 </div>
             </div></li>
             <li><div class="bp_card_outline">
                 <div class="bp_card bp_districted">
+                    <div class="bp_unauth_cover"></div>
                     <div class="bp_card_cover"></div><img src="img/codes/1.svg">
                 </div>
             </div><div class="bp_card_outline">
                 <div class="bp_card bp_districted bp_unauthorized_access">
+                    <div class="bp_unauth_cover"></div>
                     <div class="bp_card_cover"></div><img src="img/codes/1.png">
                 </div>
             </div><div class="bp_card_outline">
 
                 <div class="bp_card">
+                    <div class="bp_unauth_cover"></div>
                     <div class="bp_card_cover"></div><img src="img/codes/1.png">
                 </div>
             </div></li>
             <li><div class="bp_card_outline">
                 <div class="bp_card bp_districted">
+                    <div class="bp_unauth_cover"></div>
                     <div class="bp_card_cover"></div><img src="img/codes/1.png">
                 </div>
             </div><div class="bp_card_outline">
                 <div class="bp_card bp_districted bp_unauthorized_access">
+                    <div class="bp_unauth_cover"></div>
                     <div class="bp_card_cover"></div><img src="img/codes/1.png">
                 </div>
             </div><div class="bp_card_outline">
 
                 <div class="bp_card">
+                    <div class="bp_unauth_cover"></div>
                     <div class="bp_card_cover"></div><img src="img/codes/1.png">
                 </div>
             </div></li>
             <li><div class="bp_card_outline">
                 <div class="bp_card bp_districted">
+                    <div class="bp_unauth_cover"></div>
                     <div class="bp_card_cover"></div><img src="img/codes/1.png">
                 </div>
             </div><div class="bp_card_outline">
                 <div class="bp_card bp_districted bp_unauthorized_access">
+                    <div class="bp_unauth_cover"></div>
                     <div class="bp_card_cover"></div><img src="img/codes/1.png">
                 </div>
             </div><div class="bp_card_outline">
 
                 <div class="bp_card">
+                    <div class="bp_unauth_cover"></div>
                     <div class="bp_card_cover"></div><img src="img/codes/1.png">
                 </div>
             </div></li>
