--- a/src/markup.html
+++ b/src/markup.html
@@ -50,90 +50,105 @@
     <div class="bp_slider">
         <ul>
             <li><div class="bp_card_outline">
-                <div class="bp_cursor">
-                    <img src="img/cursor.png">
-                </div>
                 <div class="bp_card bp_selected">
                     <div class="bp_unauth_cover"></div>
-                    <div class="bp_card_cover"></div><img src="img/codes/1.png">
+                    <div class="bp_card_cover"></div>
+                    <div class="bp_card_content" style="background-image: url(img/codes/1.png)"></div>
                 </div>
             </div><div class="bp_card_outline">
                 <div class="bp_card">
                     <div class="bp_unauth_cover"></div>
-                    <div class="bp_card_cover"></div><img src="img/codes/1.png">
+                    <div class="bp_card_cover"></div>
+                    <div class="bp_card_content" style="background-image: url(img/codes/1.png)"></div>
                 </div>
             </div><div class="bp_card_outline">
                 <div class="bp_card">
                     <div class="bp_unauth_cover"></div>
-                    <div class="bp_card_cover"></div><img src="img/codes/1.png">
+                    <div class="bp_card_cover"></div>
+                    <div class="bp_card_content" style="background-image: url(img/codes/2.png)"></div>
                 </div>
             </div></li>
             <li><div class="bp_card_outline">
                 <div class="bp_card bp_districted">
                     <div class="bp_unauth_cover"></div>
-                    <div class="bp_card_cover"></div><img src="img/codes/1.png">
+                    <div class="bp_card_cover"></div>
+                    <div class="bp_card_content" style="background-image: url(img/codes/3.png)"></div>
                 </div>
             </div><div class="bp_card_outline">
                 <div class="bp_card ">
                     <div class="bp_unauth_cover"></div>
-                    <div class="bp_card_cover"></div><img src="img/codes/3.png">
+                    <div class="bp_card_cover"></div>
+                    <div class="bp_card_content" style="background-image: url(img/codes/4.png)"></div>
                 </div>
             </div><div class="bp_card_outline">
 
                 <div class="bp_card">
                     <div class="bp_unauth_cover"></div>
-                    <div class="bp_card_cover"></div><img src="img/codes/1.svg">
+                    <div class="bp_card_cover"></div>
+                    <div class="bp_card_content" style="background-image: url(img/codes/1.svg)"></div>
+                </div>
+            </div></li>
+            <li><div class="bp_card_outline">
+                <div class="bp_cursor">
+                    <img src="img/cursor.png">
+                </div>
+                <div class="bp_card bp_districted">
+                    <div class="bp_unauth_cover"></div>
+                    <div class="bp_card_cover"></div>
+                    <div class="bp_card_content" style="background-image: url(img/codes/1.svg)"></div>
+                </div>
+            </div><div class="bp_card_outline">
+                <div class="bp_card bp_districted bp_unauthorized_access">
+                    <div class="bp_unauth_cover"></div>
+                    <div class="bp_card_cover"></div>
+                    <div class="bp_card_content" style="background-image: url(img/codes/1.png)"></div>
+                </div>
+            </div><div class="bp_card_outline">
+
+                <div class="bp_card">
+                    <div class="bp_unauth_cover"></div>
+                    <div class="bp_card_cover"></div>
+                    <div class="bp_card_content" style="background-image: url(img/codes/1.png)"></div>
                 </div>
             </div></li>
             <li><div class="bp_card_outline">
                 <div class="bp_card bp_districted">
                     <div class="bp_unauth_cover"></div>
-                    <div class="bp_card_cover"></div><img src="img/codes/1.svg">
+                    <div class="bp_card_cover"></div>
+                    <div class="bp_card_content" style="background-image: url(img/codes/1.png)"></div>
                 </div>
             </div><div class="bp_card_outline">
                 <div class="bp_card bp_districted bp_unauthorized_access">
                     <div class="bp_unauth_cover"></div>
-                    <div class="bp_card_cover"></div><img src="img/codes/1.png">
+                    <div class="bp_card_cover"></div>
+                    <div class="bp_card_content" style="background-image: url(img/codes/1.png)"></div>
                 </div>
             </div><div class="bp_card_outline">
 
                 <div class="bp_card">
                     <div class="bp_unauth_cover"></div>
-                    <div class="bp_card_cover"></div><img src="img/codes/1.png">
+                    <div class="bp_card_cover"></div>
+                    <div class="bp_card_content" style="background-image: url(img/codes/1.png)"></div>
                 </div>
             </div></li>
             <li><div class="bp_card_outline">
                 <div class="bp_card bp_districted">
                     <div class="bp_unauth_cover"></div>
-                    <div class="bp_card_cover"></div><img src="img/codes/1.png">
+                    <div class="bp_card_cover"></div>
+                    <div class="bp_card_content" style="background-image: url(img/codes/1.png)"></div>
                 </div>
             </div><div class="bp_card_outline">
                 <div class="bp_card bp_districted bp_unauthorized_access">
                     <div class="bp_unauth_cover"></div>
-                    <div class="bp_card_cover"></div><img src="img/codes/1.png">
+                    <div class="bp_card_cover"></div>
+                    <div class="bp_card_content" style="background-image: url(img/codes/1.png)"></div>
                 </div>
             </div><div class="bp_card_outline">
 
                 <div class="bp_card">
                     <div class="bp_unauth_cover"></div>
-                    <div class="bp_card_cover"></div><img src="img/codes/1.png">
-                </div>
-            </div></li>
-            <li><div class="bp_card_outline">
-                <div class="bp_card bp_districted">
-                    <div class="bp_unauth_cover"></div>
-                    <div class="bp_card_cover"></div><img src="img/codes/1.png">
-                </div>
-            </div><div class="bp_card_outline">
-                <div class="bp_card bp_districted bp_unauthorized_access">
-                    <div class="bp_unauth_cover"></div>
-                    <div class="bp_card_cover"></div><img src="img/codes/1.png">
-                </div>
-            </div><div class="bp_card_outline">
-
-                <div class="bp_card">
-                    <div class="bp_unauth_cover"></div>
-                    <div class="bp_card_cover"></div><img src="img/codes/1.png">
+                    <div class="bp_card_cover"></div>
+                    <div class="bp_card_content" style="background-image: url(img/codes/1.png)"></div>
                 </div>
             </div></li>
         </ul>
