css 스프라이트용 파일 추가

--- a/src/markup.html
+++ b/src/markup.html
@@ -24,7 +24,7 @@
             <h2 class="bp_firewall_removed">Firewalls removed, full access granted</h2>
             <h2 class="bp_access_denied">Access Denied</h2>
         </div>
-        <div class="bp_status_panel">
+        <div class="bp_status_panel bp_completed">
             <div class="bp_start_area">
                 <button class="bp_button">Start Hack</button>
             </div>
