--- a/src/markup.html
+++ b/src/markup.html
@@ -89,9 +89,7 @@
                 </div>
             </div></li>
             <li><div class="bp_card_outline">
-                <div class="bp_cursor">
-                    <img src="img/cursor.png">
-                </div>
+                <div class="bp_cursor"></div>
                 <div class="bp_card bp_districted">
                     <div class="bp_unauth_cover"></div>
                     <div class="bp_card_cover"></div>
