css 스프라이트 적용 완료

--- a/src/markup.html
+++ b/src/markup.html
@@ -18,9 +18,7 @@
     <div class="bp_descriptor">
         <div class="bp_target_panel">
             <h2 class="bp_target_code">Target Code Segment</h2>
-            <div class="bp_segment">
-                    <img src="img/codes/3.png">
-            </div>
+            <div class="bp_segment" style="background-image: url(img/merged/codes.png);"></div>
             <h2 class="bp_firewall_removed">Firewalls removed, full access granted</h2>
             <h2 class="bp_access_denied">Access Denied</h2>
         </div>
@@ -33,7 +31,7 @@
             <div class="bp_found_codes">
                 <div>
                     <div class="bp_cover"></div>
-                    <div class="img_container"><img src="img/codes/10.png"></div>
+                    <div class="img_container"><img src="img/merged/codes.png"></div>
                 </div>
                 <div>
                     <div class="bp_cover"></div>
