--- a/src/js/bui/descriptor/targetPanelViewTemplate.html
+++ b/src/js/bui/descriptor/targetPanelViewTemplate.html
@@ -1,6 +1,4 @@
 <h2 class="bp_target_code">Target Code Segment</h2>
-<div class="bp_segment">
-        <img>
-</div>
+<div class="bp_segment"></div>
 <h2 class="bp_firewall_removed">Firewalls removed, full access granted</h2>
 <h2 class="bp_access_denied">Access Denied</h2>
