--- a/src/uitest.html
+++ b/src/uitest.html
@@ -22,6 +22,7 @@
         "testSlider",
         "testStatusPanel",
         "testStatusPanelViewing",
+        "testStatusPanelCode",
         "testTargetPanel",
         "testTargetPanelShowFirewallRemoved"
     ];
