--- a/src/uitest.html
+++ b/src/uitest.html
@@ -24,7 +24,8 @@
         "testStatusPanelViewing",
         "testStatusPanelCode",
         "testTargetPanel",
-        "testTargetPanelShowFirewallRemoved"
+        "testTargetPanelShowFirewallRemoved",
+        "testImageLoad"
     ];
     var requireLibs = ['jquery', 'underscore', 'jquery-ui'];
     if (location.search.indexOf("uitest") >= 0) {
