--- a/output/bypass/hacking/index.html
+++ b/output/bypass/hacking/index.html
@@ -59,7 +59,8 @@
             'jquery-ui' : 'lib/jquery-ui',
             'underscore' : 'lib/underscore',
             'backbone' : 'lib/backbone',
-            'text' : 'lib/text'
+            'text' : 'lib/text',
+            'imagesLoaded' : "lib/imagesloaded.pkgd.min"
         },
         shim : {
             'jquery-ui' : {
