--- a/output/bypass/hacking/index.html
+++ b/output/bypass/hacking/index.html
@@ -56,7 +56,7 @@
         baseUrl : 'js',
         paths : {
             'jquery' : 'lib/jquery-1.11.1',
-            'jquery-ui' : 'lib/jquery-ui',
+            'jquery-ui' : 'lib/jquery-ui.min',
             'underscore' : 'lib/underscore',
             'backbone' : 'lib/backbone',
             'text' : 'lib/text',
