안내메시지 추가

--- a/output/index.html
+++ b/output/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap 101 Template</title>
+    <title>Bypass : Hacking URL Builder</title>
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
@@ -19,6 +19,11 @@
 <body>
 <div class="container">
 <h2>Bypass : Hacking URL Builder</h2>
+<p class="info">
+    이 페이지에서 만든 해킹 URL은 2015년 1월 1일까지는 유지됩니다.
+    언제까지 유지될지는 확실하지 않는데요, 추후 유지 계획은 본 페이지에 업데이트될 예정입니다.
+    궁금하신 점은 kcopper8@gmail.com 이나 트위터계정 @kcopper8 로 문의주세요.
+</p>
 <form role="form">
     <div class="form-group">
         <label>URL when the hack was successful</label>
