default 이동 위치를 masseffect.com/refresh itself 로 변경

--- a/output/index.html
+++ b/output/index.html
@@ -27,12 +27,12 @@
 <form role="form">
     <div class="form-group">
         <label>URL when the hack was successful</label>
-        <span class="help-block">(default: https://github.com/kcopper8/masseffect_bypass/) </span>
+        <span class="help-block">(default: http://www.masseffect.com/) </span>
         <input type="text" class="form-control" id="SPL" name="SPL" placeholder="URL when the hack was successful">
     </div>
     <div class="form-group">
         <label>URL when the hack was failed</label>
-        <span class="help-block"> (default: same as when 'successful')</span>
+        <span class="help-block"> (default: refresh itself)</span>
         <input type="text" class="form-control" id="FPL" name="FPL" placeholder="URL when the hack was failed">
     </div>
     <div class="form-group">
