--- a/output/index.html
+++ b/output/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bypass : Hacking URL Builder</title>
+    <title>Bypass : 나만의 해킹 URL을 만들자!</title>
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
@@ -18,71 +18,74 @@
 </head>
 <body>
 <div class="container">
-<h2>Bypass : Hacking URL Builder</h2>
+<h1>나만의 해킹 페이지를 만들자!<small>Mass Effect Bypass : Hacking</small></h1>
+<p class="lead">
+    이 페이지에서 여러분은 자신만의 <a href="https://masseffect.herokuapp.com/bypass/hacking/" target="_blank">웹버전 Bypass : Hacking</a> 페이지를 만드실 수 있습니다.
+</p>
+
 <p class="info">
-    이 페이지에서 만든 해킹 URL은 2015년 1월 1일까지는 유지됩니다.
-    언제까지 유지될지는 확실하지 않는데요, 추후 유지 계획은 본 페이지에 업데이트될 예정입니다.
-    궁금하신 점은 kcopper8@gmail.com 이나 트위터계정 @kcopper8 로 문의주세요.
+    이 페이지에서 만든 해킹 URL은 2017년 1월 1일까지는 유지됩니다.
+    언제까지 유지될지는 확실하지 않는데요, 추후 유지 계획이 바뀌면 이 페이지에 내용을 업데이트 하겠습니다.
+    궁금하신 점은 트위터계정 <a href="https://twitter.com/kcopper8" target="_blank">@kcopper8</a> 로 문의주세요.
 </p>
 <form role="form">
     <div class="form-group">
-        <label>URL when the hack was successful</label>
-        <span class="help-block">(default: http://www.masseffect.com/) </span>
-        <input type="text" class="form-control" id="SPL" name="SPL" placeholder="URL when the hack was successful">
+        <label>해킹을 성공했을 때 이동할 URL</label>
+        <span class="help-block">(기본값: http://www.masseffect.com/) </span>
+        <input type="text" class="form-control" id="SPL" name="SPL" placeholder="http://www.masseffect.com/">
     </div>
     <div class="form-group">
-        <label>URL when the hack was failed</label>
-        <span class="help-block"> (default: refresh itself)</span>
-        <input type="text" class="form-control" id="FPL" name="FPL" placeholder="URL when the hack was failed">
+        <label>해킹이 실패했을 때 이동할 URL</label>
+        <input type="text" class="form-control" id="FPL" name="FPL" placeholder="값을 입력하지 않으면 실패시 해킹이 재시작됩니다.">
     </div>
     <div class="form-group">
-        <label>Slide Speed Per Card</label>
-        <span class="help-block"> (100ms ~ 10000ms, default : 1000) (1칸당 코드 이동 속도. 100ms ~ 10000ms)</span>
-        <input type="number" class="form-control" id="SSPC" name="SSPC" placeholder="Slide Speed Per Card (100ms ~ 10000ms, default : 1000) ">
+        <label>코드가 1칸 이동하는데 걸리는 시간</label>
+        <span class="help-block"> (100ms ~ 10000ms, 기본값 : 1000) (값이 적을수록 속도가 빨라집니다.)</span>
+        <input type="number" class="form-control" id="SSPC" name="SSPC" placeholder="1000">
     </div>
     <div class="form-group">
-        <label>Game Time (seconds)</label>
-        <span class="help-block"> (10~) (게임 시간제한 (초))</span>
-        <input type="number" class="form-control" id="GTS" name="GTS" placeholder="Game Time (seconds) ">
+        <label>제한시간 (초)</label>
+        <span class="help-block"> (10~, 기본값 : 40)</span>
+        <input type="number" class="form-control" id="GTS" name="GTS" placeholder="40">
     </div>
     <div class="form-group">
-        <label>Code Type Count</label>
-        <span class="help-block"> (1~11, default: 11) (게임에 등장하는 코드 갯수, 기본값: 11)</span>
-        <input type="number" class="form-control" id="CTC" name="CTC" placeholder="numbers of code types. (1 ~ 11)">
+        <label>코드 종류 (개)</label>
+        <span class="help-block"> (1~11, 기본값: 11) (게임에 등장하는 코드 갯수, 기본값: 11)</span>
+        <input type="number" class="form-control" id="CTC" name="CTC" placeholder="11">
     </div>
     <div class="form-group">
-        <label>Probabilities by District Pattern</label>
-        <span class="help-block">(접근제한영역 발생확률)</span>
+        <label>접근제한코드 발생확률</label>
+        <span class="help-block">(접근제한의 패턴별로 발생확률를 지정합니다. 아래 3항목을 모두 입력해야 적용됩니다.)</span>
         <div class="row">
             <div class="col-xs-4 form-group">
-                <label>no district patterns</label>
-                <span class="help-block">(1~, default: 3) (접근제한영역이 없는 경우, 기본값: 3)</span>
-                <input type="text" class="form-control" id="DP1" name="DP1" placeholder="DistrictProbabilities">
+                <label>제한코드 없음</label>
+                <span class="help-block">(1~, 기본값: 3, 이 값의 비율이 높을수록 제한코드가 나오지 않습니다.)</span>
+                <input type="text" class="form-control" id="DP1" name="DP1" placeholder="3">
             </div>
             <div class="col-xs-4 form-group">
-                <label>One District Patterns</label>
-                <span class="help-block">(0~, default: 1) (접근제한영역이 1개 있는 경우, 기본값: 1)</span>
-                <input type="text" class="form-control" id="DP2" name="DP2" placeholder="DistrictProbabilities">
+                <label>제한코드 1개</label>
+                <span class="help-block">(0~, 기본값: 1, 이 값의 비율이 높을수록 제한코드가 1개 있는 패턴이 많이 나옵니다.)</span>
+                <input type="text" class="form-control" id="DP2" name="DP2" placeholder="1">
             </div>
             <div class="col-xs-4 form-group">
-                <label>Two District Patterns</label>
-                <span class="help-block">(0~, default: 1) (접근제한영역이 2개 있는 경우, 기본값: 1)</span>
-                <input type="text" class="form-control" id="DP3" name="DP3" placeholder="DistrictProbabilities">
+                <label>제한코드 2개</label>
+                <span class="help-block">(0~, 기본값: 1, 이 값의 비율이 높을수록 제한코드가 2개 있는 패턴이 많이 나옵니다.)</span>
+                <input type="text" class="form-control" id="DP3" name="DP3" placeholder="1">
             </div>
         </div>
     </div>
 </form>
     <div class="form-group">
-        <label>Your URL Is</label>
-        <input type="text" class="form-control" id="target_url" name="target_URL" placeholder="Your URL Is">
+        <label>설정한 해킹 URL 을 아래에서 복사하세요.</label>
+        <input type="text" class="form-control" id="target_url" name="target_URL" value="https://masseffect.herokuapp.com/bypass/hacking/">
     </div>
 </div>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-<script src="common/js/underscore.js"></script>
-<script src="common/js/backbone.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.3.3/backbone-min.js"></script>
 <script>
     var ConfigurationView = Backbone.View.extend({
         initialize : function () {
